--- a/wp-content/themes/brookhouse/css/main.css
+++ b/wp-content/themes/brookhouse/css/main.css
@@ -187,6 +187,7 @@ li.logo img {
   display: flex;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center center;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -355,6 +356,7 @@ li.logo img {
     width: 150px;
     height: 150px;
     border-radius: 100%;
+    background-size: cover;
 }
 /* #bigimages img {
   border: 4px solid #555;
@@ -490,4 +492,36 @@ li.logo img {
 
 .category-panel {
   flex-direction: column;
+}
+
+.acf-map {
+  min-height: 75vh;
+}
+
+.column-panel {
+  min-height: 50vh;
+}
+
+/*GALLERY CSS*/
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 33.3333333%;
+  max-width: 33.333333%;
+  overflow: hidden;
+}
+
+.column img {
+  vertical-align: middle;
+  width: 140%;
+  padding:  4px 8px;
+}
+
+.row .column:last-child {
+    border-right: 8px solid white;
 }
