--- a/wp-content/themes/brookhouse/css/main.css
+++ b/wp-content/themes/brookhouse/css/main.css
@@ -525,3 +525,30 @@ li.logo img {
 .row .column:last-child {
     border-right: 8px solid white;
 }
+
+/*About Section Styling */
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-image, .about-desc {
+  display: flex;
+  flex: 1 1 50%;
+  min-height: 30vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-image {
+  background-size: cover;
+  background-position: center center;
+}
+
+.one {
+  order: 1;
+}
+
+.two {
+  order: 2;
+}
