--- a/wp-content/themes/brookhouse/css/main.css
+++ b/wp-content/themes/brookhouse/css/main.css
@@ -20,6 +20,9 @@ html {
 
 body {
   margin: 0;
+  min-height: 100%;
+  position: relative;
+
 }
 
 *, *:before, *:after {
@@ -134,12 +137,16 @@ nav li {
 }
 
 nav a {
-	text-decoration: none;
-	padding:20px;
-	display: inline-block;
-	transition:all 0.2s;
-	text-transform: uppercase;
-  font-weight: 800;
+    text-decoration: none;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s;
+    text-transform: uppercase;
+    font-weight: 800;
+    width: 100%;
+    height: 100%;
 }
 
 nav li:last-child, nav li:first-child {
@@ -152,8 +159,8 @@ nav li:first-child a {
   font-family: var(--heading-font);
 }
 
-nav li:hover {
-  background-color: white;
+nav li:hover, .current-menu-item {
+  background-color: rgba(255,255,255, 0.9);
   color: var(--main-font-color);
 /*   border-bottom: 5px inset rgb(252, 233, 201);
  *//*   text-decoration: underline;
@@ -203,6 +210,7 @@ li.logo img {
 .home-jumbotron p {
   color: white;
   z-index: 1;
+  margin: 0;
 }
 .inner-jumbo {
   display: flex;
@@ -227,7 +235,7 @@ li.logo img {
   width: auto;
   /* max-width: 300px; */
   text-align: center;
-  padding: 27px;
+  padding: 0 27px;
 }
 
 .title-cont h2 {
@@ -239,7 +247,7 @@ li.logo img {
 /* ABOUT SECTION*/
 .about-section {
   display: flex;
-  max-width: 1500px;
+  max-width: 2000px;
   margin: 0 auto;
 }
 
@@ -318,7 +326,7 @@ li.logo img {
 #gallery {
     margin: 0 auto;
     width: 95%;
-    max-width: 1400px;
+    max-width: 2000px;
     display: flex;
     /* flex-direction: column; */
 }
@@ -329,7 +337,9 @@ li.logo img {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
-   align-items: center; */
+   align-items: center; */    
+   display: flex;
+   flex-wrap: wrap;
 }
 
 .gallery-thumb-cont {
@@ -398,6 +408,7 @@ li.logo img {
   position: relative;
   align-items: center;
   flex-direction: column;
+  margin-bottom: -10px;
     }
 
 .panels {
@@ -407,7 +418,7 @@ li.logo img {
     /* flex-direction: column; */
     /* max-width: 1480px; */
     width: 100%;    
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
 }
 
 .panel {
@@ -485,7 +496,6 @@ li.logo img {
     width: 100%;
     height: 400px;
     border: #ccc solid 1px;
-    margin: 20px 0;
 }
 
 /*CATEGORY.PHP Styling */
@@ -535,20 +545,145 @@ li.logo img {
 .about-image, .about-desc {
   display: flex;
   flex: 1 1 50%;
-  min-height: 30vh;
+  flex-direction: column;   
+  min-height: 40vh;
   justify-content: center;
   align-items: center;
+  padding: 0 0px;
+}
+
+.about-desc p {
+    padding: 0 41px;
+}
+
+.about-image h2, .about-desc h2 {
+  margin-bottom: 0;
 }
 
 .about-image {
   background-size: cover;
   background-position: center center;
+  position: relative;
 }
 
-.one {
-  order: 1;
+.about-image ul, .about-desc ul {
+  list-style-type: none;
 }
 
-.two {
-  order: 2;
+.white-overlay {
+    position: absolute;
+    width: 30%;
+    height: 100%;
+}
+
+.overlay-right {
+  background: linear-gradient(to right, rgba(255,255,255, 0), rgba(255,255,255, 1));
+  align-self: flex-end;
+}
+
+.overlay-left {
+    background: linear-gradient(to right, rgba(255,255,255, 1), rgba(255,255,255, 0));
+    align-self: flex-start;
+}
+
+/* 
+ * Footer Styling *
+ */
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  background: #1c321c;
+  align-items: center;
+  border-radius: 10px 10px 0 0;
+  border: 6px solid var(--main-font-color);
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+/*   margin-top: -8px; */
+  z-index: 1;
+  position: relative; 
+  margin-bottom: -8px;
+}
+
+footer *  {
+  color: white;
+}
+
+footer img {
+  width: 95px;
+}
+
+footer li {
+  list-style-type: none;
+}
+
+/* .autoplay {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+  } */
+
+.reviews-cont {
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  display: flex;
+}
+
+.review {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 40px;
+}
+
+
+.slick-slide div {
+      opacity: 0.7;
+    transform: scale(0.75);
+}
+
+.slick-active div {
+    opacity: 0.8;
+    transform: scale(0.9);
+    transition: all 300ms ease;
+}
+
+  .slick-center div {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.slick-dots li button { 
+   display: none;
+} 
+
+.slick-dots {
+  display: flex !important;
+  flex-direction: row;
+  flex: 1 1 1000px;
+  justify-content: center;
+}
+
+
+.slick-dots li {
+  width: 30px;
+  height: 30px;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.slick-dots .slick-active {
+  opacity: 1;
 }
