--- a/wp-content/themes/brookhouse/css/main.css
+++ b/wp-content/themes/brookhouse/css/main.css
@@ -633,11 +633,13 @@ footer li {
     -webkit-tap-highlight-color: transparent;
   } */
 
+/*Review Styling*/
 .reviews-cont {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
 }
 
 .review {
@@ -645,19 +647,19 @@ footer li {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 40px;
+  padding: 0 40px;
 }
 
 
 .slick-slide div {
-      opacity: 0.7;
-    transform: scale(0.75);
+  opacity: 0.7;
+  transform: scale(0.75);
 }
 
 .slick-active div {
-    opacity: 0.8;
-    transform: scale(0.9);
-    transition: all 300ms ease;
+  opacity: 0.8;
+  transform: scale(0.9);
+  transition: all 300ms ease;
 }
 
   .slick-center div {
@@ -666,7 +668,7 @@ footer li {
 }
 
 .slick-dots li button { 
-   display: none;
+  display: none;
 } 
 
 .slick-dots {
@@ -686,4 +688,15 @@ footer li {
 
 .slick-dots .slick-active {
   opacity: 1;
+}
+
+/*Star styling*/
+
+.star-1 .far:nth-child(1),
+.star-2 .far:nth-child(1), .star-2 .far:nth-child(2),
+.star-3 .far:nth-child(1), .star-3 .far:nth-child(2), .star-3 .far:nth-child(3),
+.star-4 .far:nth-child(1), .star-4 .far:nth-child(2), .star-4 .far:nth-child(3), .star-4 .far:nth-child(4),
+.star-5 .far:nth-child(1), .star-5 .far:nth-child(2), .star-5 .far:nth-child(3), .star-5 .far:nth-child(4), .star-5 .far:nth-child(5)
+ {
+  font-weight: 600;
 }
