--- a/wp-content/themes/brookhouse/css/main.css
+++ b/wp-content/themes/brookhouse/css/main.css
@@ -443,6 +443,7 @@ width: 100%;
 height: 100%;
 background-size: cover;
 background-position: center;
+pointer-events: none;
 }
 
 /*  #normal, #normal2, #normal3, #normal4, #normal5 {
@@ -479,6 +480,7 @@ background: pink;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
+     scroll-behavior: smooth;
 }
 
 .title-mobile {
@@ -514,9 +516,19 @@ width: 100%;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
+  display: flex;
 }
 
-#thumbs img {
+#bigimages .nextprev {
+    position: static;
+    pointer-events: all;
+}
+
+#bigimages #previousImage{
+    flex: 1 0 33%;
+}
+
+#thumbs .thumb {
   width: 11vw;
   height: 11vw;
   border-radius: 100%;
@@ -763,6 +775,7 @@ display: flex;
 display: -webkit-box;
 display: -ms-flexbox;
 display: flex;
+width: 100%;
 }
 
 .about-image, .about-desc {
@@ -851,6 +864,7 @@ border-right: none;
 z-index: 1;
 position: relative; 
 margin-bottom: -8px;
+width: 100%;
 }
 
 footer *  {
@@ -995,11 +1009,39 @@ font-size: 1.2em;
 }
 
 .blog-content img {
-    border-radius: 25px;
+    border-radius: 5px;
     border: 4px solid;
     padding: 0px;
     width: 40%;
     max-width: 600px;
     margin: 14px;
     min-width: 300px;
+    box-shadow: 2px 2px 5px 2px #8a8787;
+    transform: rotate(2deg);
+}
+
+.top-tip {
+    background: var(--main-font-color);
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+    width: 40%;
+    float: left;
+    margin: 27px 40px 27px 0;
+    position: relative;
+    padding: 20px;
+    box-shadow: 2px 2px 5px 2px #8a8787;
+    transform: rotate(-2deg);
+}
+
+.top-tip h4 {
+    background: #000;
+    color: #fff;
+    padding: 4px;
+    transform: rotate(1deg);
+    display: table;
+    /* float: left; */
+    position: absolute;
+    top: -27px;
+    margin: 0;
 }
