--- a/wp-content/themes/brookhouse/css/mobile.css
+++ b/wp-content/themes/brookhouse/css/mobile.css
@@ -186,7 +186,7 @@
     overflow-x: scroll;
   }
 
-  #thumbs img {
+  #thumbs .thumb {
     width: 120px;
     height: 120px;
   }
@@ -259,6 +259,9 @@
             flex: 100%;
     max-width: 100%;
   }
+  .gallery-page-container {
+    margin-right: 8px;
+  }
 }
 
 /* Exmouth Blog */
@@ -267,9 +270,16 @@
   
   .blog-content img {
     width: 90%;
-    margin:  0 auto;
+    margin:  25px auto;
     display: block;
     float: none;
     min-width: 0;
+  }
+}
+
+@media(max-width:650px) {
+  .blog-content {
+    text-align: center;
+    width: 95%;
   }
 }
